GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.20alpha26 :
    
        - Fix for incorrect locale setting when starting.
        
    - 1.20alpha25 :
    
        - pkprinters allows --list to normal users, but require user
          to be a PyKota administrator when another command line 
          option is used.
          
        - pkhint doesn't use absolute path to search for helper commands
          anymore.
          
        - Spanish translation ready for 1.20.   
        
    - 1.20alpha24 :
    
        - Now warnpykota only warns users limited by balance once.
        
        - Now warnpykota only warns users who have ever printed,
          to not cause confusion to users who have just opened
          their account.
        
        - Prepared help messages for translations.
        
    - 1.20alpha23 :
    
        - Add workaround for locale problem.
        
    - 1.20alpha22 :
    
        - Hopefully final fix for data encoding charset.
        
        - edpykota now refuse to work if the user is not a PyKota admin.
        
        - Fixes a recently introduced bug with users groups and PostgreSQL.
        
    - 1.20alpha21 :
    
        - Now dumpykota refuses to launch if the current user is not
          a PyKota administrator (a PyKota administrator is an user
          allowed to read the pykotadmin.conf file).
          
        - Now any PyKota administrator can use repykota and warnpykota
          with additionnal arguments, not only the root user.
          
        - Improved documentation a bit.
        
    - 1.20alpha20 :
    
        - Reduced delay in internal SNMP and PJL_over_TCP handlers
          from 2 to 1 second.
        